# boardtrace

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 06b908fae09f_initial_schema.py  7f01a2b3c4d5_add_authentication.py  9c3d4e5f6a7b_align_auth_unique_indexes.py  ab8c9d0e1f2a_add_completed_game_ingestion.py  bc9d0e1f2a3b_add_extension_pairings.py  cd0e1f2a3b4c_add_analysis_queue_foundation.py  de1f2a3b4c5d_add_outbox_delivery_generation.py  ef2a3b4c5d6e_add_analysis_job_lease_generation.py  f03a4b5c6d7e_add_analysis_result_persistence.py
apps/api/src/boardtrace_api/: __init__.py  app.py  config.py  ingestion_observability.py  logging.py  main.py  worker.py
apps/api/tests/: __init__.py  conftest.py  postgres_helpers.py  test_app_factory.py  test_database_settings.py  test_errors.py  test_health.py  test_logging.py  test_middleware.py  test_openapi.py  test_persistence_models.py  test_postgres_integration.py  test_postgres_migrations.py  test_request_id.py  test_settings.py  test_trusted_hosts.py
apps/api/tests/integration/: test_analysis_job_concurrency.py  test_analysis_job_orchestration.py  test_analysis_result_persistence.py  test_auth_api.py  test_auth_api_refresh_concurrency.py  test_auth_service_logout.py  test_auth_service_refresh_concurrency.py  test_auth_service_refresh_lifecycle.py  test_auth_service_refresh_replay.py  test_auth_service_register_login.py  test_auth_session_family_revoke.py  test_auth_session_persistence.py  test_auth_session_replacement_link.py  test_auth_session_row_lock.py  test_auth_session_single_revoke.py  test_auth_session_user_wide_revoke.py  test_current_user_dependency.py  test_extension_pairing_concurrency.py  test_internal_analysis_reads.py  test_move_metrics_from_persisted_snapshot.py  test_public_analysis_read_api.py  test_public_analysis_status_api.py  test_transaction_boundary_ingestion.py  test_unified_analysis_aggregate.py  test_user_repository.py  test_worker_analysis_execution.py
apps/api/tests/runtime/: celery_harness.py  controllers.py  test_analysis_job_queue_failure_recovery.py  test_analysis_job_queue_uvicorn.py  test_analysis_result_postgres_stockfish.py  test_auth_uvicorn_smoke.py  test_extension_pairing_ingestion_uvicorn.py  test_stockfish_subprocess.py  test_worker_analysis_postgres_stockfish.py  test_worker_distributed_stockfish_recovery.py
apps/web/: package.json
(+138 files in other folders)
