[project]
name = "boardtrace-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = ["fastapi>=0.128,<1", "pydantic-settings>=2.7,<3", "uvicorn>=0.34,<1"]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["httpx>=0.28,<1", "pytest>=8.3,<9"]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
